fixed text size and text overflow from smol device

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 3) {
+    html {
+        font-size: 14px;
+    }
+}
